Fix block alignment on Firefox

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -220,6 +220,7 @@ a.pure-button-primary {
 .center {
     max-width: 768px;
     margin: 0 auto;
+    display: block;
 }
 
 .example {
